fix footer spacing/sizing

--- a/apps/consent-ui/src/components/Footer/Footer.module.scss
+++ b/apps/consent-ui/src/components/Footer/Footer.module.scss
@@ -9,9 +9,8 @@
   @apply gap-8 grid-cols-2 grid-rows-3;
   @media (min-width: theme('screens.md')) {
     font-size: theme('fontSize.sm');
-    height: 12rem;
     min-height: 20vh;
-    @apply grid-cols-4 grid-rows-2 gap-y-4 gap-x-8;
+    @apply grid-cols-4 grid-rows-3 gap-y-4 gap-x-8;
   }
   @media (min-width: theme('screens.xl')) {
     @apply grid-cols-5 grid-rows-2;
@@ -49,11 +48,8 @@
   width: 100%;
   @apply grid-cols-2 col-span-2 row-span-1 gap-y-4 order-3;
   font-weight: theme('fontWeight.bold');
-  @media (min-width: theme('screens.sm')) {
-    text-align: center;
-  }
   @media (min-width: theme('screens.md')) {
-    @apply gap-y-0 order-2 col-span-2 row-span-1;
+    @apply gap-y-4 order-2 col-span-2 row-span-2;
   }
   @media (min-width: theme('screens.xl')) {
     @apply gap-8 col-span-3;
@@ -69,7 +65,7 @@
     @apply order-4 col-span-4 row-span-1 items-start;
   }
   @media (min-width: theme('screens.xl')) {
-    @apply col-span-3 items-center;
+    @apply col-span-5 items-center;
   }
 }
 
